[gd_scene load_steps=6 format=3 uid="uid://ybp3bxlv5ojc"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/Shop.gd" id="2"]
[ext_resource type="FontFile" uid="uid://isqeyxdhl801" path="res://Assets/GROBOLD.ttf" id="3"]

[sub_resource type="Animation" id="9"]
resource_name = "Popup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rauv1"]
_data = {
"Popup": SubResource("9")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonStartDay" type="Button" parent="UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Mulai Hari"

[node name="LabelMoney" type="Label" parent="UI"]
layout_mode = 0
offset_left = 144.0
offset_top = 136.0
offset_right = 223.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "(money)"

[node name="ButtonShopSettings" type="Button" parent="UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 192.0
offset_right = 124.0
offset_bottom = 226.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Atur Toko"

[node name="PanelShopSettings" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 20.8
anchor_top = 1.6
anchor_right = 28.4
anchor_bottom = 15.8
offset_left = -6.10352e-05
offset_bottom = -6.10352e-05
pivot_offset = Vector2(304, 568)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/PanelShopSettings"]
libraries = {
"": SubResource("AnimationLibrary_rauv1")
}

[node name="LabelFoodPriceTitle" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0001
offset_top = 40.0
offset_right = 170.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Harga Makanan"
vertical_alignment = 1

[node name="LabelFoodPrice" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 18
text = "(foodPrice)"
vertical_alignment = 1

[node name="ButtonFoodPricePlus" type="Button" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 136.0
offset_top = 80.0
offset_right = 160.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 16
text = "+"

[node name="ButtonFoodPriceMin" type="Button" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 168.0
offset_top = 80.0
offset_right = 192.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 16
text = "-"

[node name="LabelLevelProductTitle" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0001
offset_top = 128.0
offset_right = 189.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Kualitas Makanan"
vertical_alignment = 1

[node name="LabelLevelProduct" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0
offset_top = 168.0
offset_right = 144.0
offset_bottom = 191.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 18
text = "(levelProduct)"
vertical_alignment = 1

[node name="ButtonLevelProductUpgrade" type="Button" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 136.0
offset_top = 168.0
offset_right = 230.0
offset_bottom = 193.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 16
text = "Tingkatkan"

[node name="LabelLevelPromotionTitle" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0001
offset_top = 216.0
offset_right = 95.0001
offset_bottom = 239.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Promosi"
vertical_alignment = 1

[node name="LabelLevelPromotion" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0001
offset_top = 256.0
offset_right = 162.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 18
text = "(levelPromotion)"
vertical_alignment = 1

[node name="ButtonLevelPromotionUpgrade" type="Button" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 136.0
offset_top = 256.0
offset_right = 230.0
offset_bottom = 281.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 16
text = "Tingkatkan"

[node name="LabelLevelPlacementTitle" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0001
offset_top = 304.0
offset_right = 107.0
offset_bottom = 327.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Distribusi"
vertical_alignment = 1

[node name="LabelLevelPlacement" type="Label" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 16.0001
offset_top = 344.0
offset_right = 162.0
offset_bottom = 367.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 18
text = "(levelPlacement)"
vertical_alignment = 1

[node name="ButtonLevelPlacementUpgrade" type="Button" parent="UI/PanelShopSettings"]
layout_mode = 0
offset_left = 136.0
offset_top = 344.0
offset_right = 230.0
offset_bottom = 369.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 16
text = "Tingkatkan"

[node name="Shop" type="Control" parent="."]
anchors_preset = 0
offset_left = 744.0
offset_top = 15.0
offset_right = 784.0
offset_bottom = 55.0
script = ExtResource("2")

[node name="TimerStartDay" type="Timer" parent="."]
wait_time = 10.0

[node name="TimerTransaction" type="Timer" parent="."]

[connection signal="pressed" from="UI/ButtonStartDay" to="." method="_on_ButtonStartDay_pressed"]
[connection signal="pressed" from="UI/ButtonShopSettings" to="." method="_on_ButtonShopSettings_pressed"]
[connection signal="pressed" from="UI/PanelShopSettings/ButtonFoodPricePlus" to="." method="_on_ButtonFoodPricePlus_pressed"]
[connection signal="pressed" from="UI/PanelShopSettings/ButtonFoodPriceMin" to="." method="_on_ButtonFoodPriceMin_pressed"]
[connection signal="pressed" from="UI/PanelShopSettings/ButtonLevelProductUpgrade" to="." method="_on_buttonLevelProductUpgrade_pressed"]
[connection signal="pressed" from="UI/PanelShopSettings/ButtonLevelPromotionUpgrade" to="." method="_on_buttonLevelPromotionUpgrade_pressed"]
[connection signal="pressed" from="UI/PanelShopSettings/ButtonLevelPlacementUpgrade" to="." method="_on_buttonLevelPlacementUpgrade_pressed"]
[connection signal="timeout" from="TimerStartDay" to="." method="_on_TimerStartDay_timeout"]
[connection signal="timeout" from="TimerTransaction" to="." method="_on_TimerTransaction_timeout"]
